cmake_minimum_required(VERSION 3.16)

project(NSP-thirdparties VERSION 1.0.0)

set(FLB_JEMALLOC No)
set(FLB_REGEX Yes)
set(FLB_UTF8_ENCODER Yes)
set(FLB_PARSER Yes)
set(FLB_TLS Yes)
set(FLB_BINARY Yes)
set(FLB_EXAMPLES No)
set(FLB_SHARED_LIB No)
set(FLB_VALGRIND Yes)
set(FLB_TRACE No)
set(FLB_CHUNK_TRACE Yes)
set(FLB_TESTS_RUNTIME No)
set(FLB_TESTS_INTERNAL No)
set(FLB_TESTS_INTERNAL_FUZZ No)
set(FLB_TESTS_OSSFUZZ No)
set(FLB_MTRACE No)
set(FLB_POSIX_TLS No)
set(FLB_INOTIFY No)
set(FLB_SQLDB No)
set(FLB_HTTP_SERVER Yes)
set(FLB_BACKTRACE No)
set(FLB_LUAJIT Yes)
set(FLB_RECORD_ACCESSOR Yes)
set(FLB_SIGNV4 Yes)
set(FLB_AWS Yes)
set(FLB_STREAM_PROCESSOR Yes)
set(FLB_AVRO_ENCODER No)
set(FLB_AWS_ERROR_REPORTER No)
set(FLB_ARROW No)
set(FLB_WINDOWS_DEFAULTS No)
set(FLB_WASM No)
set(FLB_WAMRC No)
set(FLB_WASM_STACK_PROTECT No)
set(FLB_METRICS No)
set(FLB_PROXY_GO No)
set(FLB_CUSTOM_CALYPTIA No)
set(FLB_CONFIG_YAML No)
set(FLB_IN_CPU No)
set(FLB_IN_THERMAL No)
set(FLB_IN_DISK No)
set(FLB_IN_DOCKER No)
set(FLB_IN_DOCKER_EVENTS No)
set(FLB_IN_EXEC No)
set(FLB_IN_EXEC_WASI No)
set(FLB_IN_EVENT_TYPE No)
set(FLB_IN_FLUENTBIT_METRICS No)
set(FLB_IN_FORWARD Yes)
set(FLB_IN_HEALTH No)
set(FLB_IN_HTTP No)
set(FLB_IN_MEM No)
set(FLB_IN_KUBERNETES_EVENTS No)
set(FLB_IN_KAFKA No)
set(FLB_IN_KMSG No)
set(FLB_IN_LIB No)
set(FLB_IN_RANDOM No)
set(FLB_IN_SERIAL Yes)
set(FLB_IN_STDIN Yes)
set(FLB_IN_SYSLOG Yes)
set(FLB_IN_TAIL Yes)
set(FLB_IN_UDP Yes)
set(FLB_IN_TCP Yes)
set(FLB_IN_UNIX_SOCKET Yes)
set(FLB_IN_MQTT No)
set(FLB_IN_HEAD Yes)
set(FLB_IN_PROC No)
set(FLB_IN_SYSTEMD No)
set(FLB_IN_DUMMY Yes)
set(FLB_IN_NGINX_EXPORTER_METRICS No)
set(FLB_IN_NETIF No)
set(FLB_IN_WINLOG No)
set(FLB_IN_WINSTAT No)
set(FLB_IN_WINEVTLOG No)
set(FLB_IN_COLLECTD No)
set(FLB_IN_PROMETHEUS_SCRAPE No)
set(FLB_IN_STATSD No)
set(FLB_IN_EVENT_TEST No)
set(FLB_IN_STORAGE_BACKLOG No)
set(FLB_IN_EMITTER Yes)
set(FLB_IN_NODE_EXPORTER_METRICS No)
set(FLB_IN_WINDOWS_EXPORTER_METRICS No)
set(FLB_IN_PODMAN_METRICS No)
set(FLB_IN_OPENTELEMETRY No)
set(FLB_IN_ELASTICSEARCH No)
set(FLB_IN_CALYPTIA_FLEET No)
set(FLB_IN_SPLUNK No)
set(FLB_IN_PROCESS_EXPORTER_METRICS No)
set(FLB_OUT_AZURE No)
set(FLB_OUT_AZURE_BLOB No)
set(FLB_OUT_AZURE_LOGS_INGESTION No)
set(FLB_OUT_AZURE_KUSTO No)
set(FLB_OUT_BIGQUERY Yes)
set(FLB_OUT_CALYPTIA No)
set(FLB_OUT_COUNTER No)
set(FLB_OUT_DATADOG No)
set(FLB_OUT_ES No)
set(FLB_OUT_EXIT No)
set(FLB_OUT_FORWARD Yes)
set(FLB_OUT_GELF No)
set(FLB_OUT_HTTP No)
set(FLB_OUT_INFLUXDB No)
set(FLB_OUT_NATS No)
set(FLB_OUT_NRLOGS No)
set(FLB_OUT_OPENSEARCH No)
set(FLB_OUT_TCP Yes)
set(FLB_OUT_UDP Yes)
set(FLB_OUT_PLOT No)
set(FLB_OUT_FILE Yes)
set(FLB_OUT_TD Yes)
set(FLB_OUT_RETRY No)
set(FLB_OUT_PGSQL No)
set(FLB_OUT_SKYWALKING No)
set(FLB_OUT_SLACK No)
set(FLB_OUT_SPLUNK No)
set(FLB_OUT_STACKDRIVER No)
set(FLB_OUT_STDOUT Yes)
set(FLB_OUT_SYSLOG Yes)
set(FLB_OUT_LIB No)
set(FLB_OUT_NULL Yes)
set(FLB_OUT_FLOWCOUNTER No)
set(FLB_OUT_LOGDNA No)
set(FLB_OUT_LOKI Yes)
set(FLB_OUT_KAFKA No)
set(FLB_OUT_KAFKA_REST No)
set(FLB_OUT_CLOUDWATCH_LOGS No)
set(FLB_OUT_KINESIS_FIREHOSE No)
set(FLB_OUT_KINESIS_STREAMS No)
set(FLB_OUT_OPENTELEMETRY No)
set(FLB_OUT_PROMETHEUS_EXPORTER No)
set(FLB_OUT_PROMETHEUS_REMOTE_WRITE No)
set(FLB_OUT_S3 No)
set(FLB_OUT_VIVO_EXPORTER No)
set(FLB_OUT_WEBSOCKET No)
set(FLB_OUT_ORACLE_LOG_ANALYTICS No)
set(FLB_OUT_CHRONICLE No)
set(FLB_FILTER_ALTER_SIZE No)
set(FLB_FILTER_AWS No)
set(FLB_FILTER_ECS No)
set(FLB_FILTER_CHECKLIST No)
set(FLB_FILTER_EXPECT Yes)
set(FLB_FILTER_GREP Yes)
set(FLB_FILTER_MODIFY Yes)
set(FLB_FILTER_STDOUT Yes)
set(FLB_FILTER_SYSINFO No)
set(FLB_FILTER_PARSER Yes)
set(FLB_FILTER_KUBERNETES No)
set(FLB_FILTER_REWRITE_TAG Yes)
set(FLB_FILTER_THROTTLE No)
set(FLB_FILTER_THROTTLE_SIZE No)
set(FLB_FILTER_TYPE_CONVERTER No)
set(FLB_FILTER_MULTILINE Yes)
set(FLB_FILTER_NEST Yes)
set(FLB_FILTER_LOG_TO_METRICS No)
set(FLB_FILTER_LUA Yes)
set(FLB_FILTER_LUA_USE_MPACK Yes)
set(FLB_FILTER_RECORD_MODIFIER No)
set(FLB_FILTER_TENSORFLOW No)
set(FLB_FILTER_GEOIP2 No)
set(FLB_FILTER_NIGHTFALL No)
set(FLB_FILTER_WASM No)
set(FLB_PROCESSOR_LABELS No)
set(LUAJIT_DIR Off)
set(LUA_DIR "${CMAKE_SOURCE_DIR}/Lua/lua-5.4.4/src")
add_subdirectory(fluent-bit)